[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font/DynamicFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Font/DynamicFontSmaller.tres" type="DynamicFont" id=2]
[ext_resource path="res://Script/optionMenu.gd" type="Script" id=3]
[ext_resource path="res://Style/ButtonBlue.tres" type="StyleBox" id=4]
[ext_resource path="res://Style/ButtonBlueDark.tres" type="StyleBox" id=5]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.8
margin_bottom = 1.0
rect_min_size = Vector2( 720, 1025 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_right = 700.0
margin_bottom = 1025.0
custom_constants/separation = 40

[node name="MusicBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 680.0
margin_bottom = 70.0
custom_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MusicBox"]
margin_right = 170.0
margin_bottom = 70.0
rect_min_size = Vector2( 170, 70 )
custom_fonts/font = ExtResource( 1 )
text = "Music"
align = 1
valign = 1

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/MusicBox"]
margin_left = 220.0
margin_right = 680.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05

[node name="TutorialButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 170.0
margin_bottom = 180.0
rect_min_size = Vector2( 170, 70 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TutorialButton"]
anchor_top = 0.014
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.98
custom_fonts/font = ExtResource( 2 )
text = "Tutorial"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 220.0
margin_right = 170.0
margin_bottom = 290.0
rect_min_size = Vector2( 170, 70 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/RestartButton"]
anchor_top = 0.014
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.98
custom_fonts/font = ExtResource( 2 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 330.0
margin_right = 170.0
margin_bottom = 400.0
rect_min_size = Vector2( 170, 70 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CreditButton"]
anchor_top = 0.014
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.98
custom_fonts/font = ExtResource( 2 )
text = "Credit"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_exited" from="MarginContainer/VBoxContainer/MusicBox/MusicSlider" to="." method="_on_MusicSlider_mouse_exited"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MusicBox/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditButton" to="." method="_on_CreditButton_pressed"]
